--- a/SheduleTelegramBot/SheduleTelegramBot.csproj
+++ b/SheduleTelegramBot/SheduleTelegramBot.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiResponse.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
